--- a/server/.mvn/wrapper/maven-wrapper.properties
+++ b/server/.mvn/wrapper/maven-wrapper.properties
@@ -1,2 +1,10 @@
+#
+# BeoEarth
+# Copyright(c) 2009-2020, Beowurks
+# Original Author: Eddie Fann
+# License: Eclipse Public License - v 2.0 (https://www.eclipse.org/org/documents/epl-2.0/EPL-2.0.html)
+#
+#
+
 distributionUrl=https://repo.maven.apache.org/maven2/org/apache/maven/apache-maven/3.6.3/apache-maven-3.6.3-bin.zip
 wrapperUrl=https://repo.maven.apache.org/maven2/io/takari/maven-wrapper/0.5.6/maven-wrapper-0.5.6.jar
