--- a/server/pom.xml
+++ b/server/pom.xml
@@ -28,6 +28,7 @@
     <java.version>8</java.version>
     <surefire.version>2.4.3</surefire.version>
     <swagger.version>3.0.0</swagger.version>
+    <gson.version>2.8.6</gson.version>
   </properties>
 
   <dependencies>
@@ -58,6 +59,13 @@
       <groupId>io.springfox</groupId>
       <artifactId>springfox-boot-starter</artifactId>
       <version>${swagger.version}</version>
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>${gson.version}</version>
     </dependency>
   </dependencies>
 
