--- a/server/pom.xml
+++ b/server/pom.xml
@@ -17,8 +17,8 @@
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
 
-  <groupId>com.beoearth</groupId>
-  <artifactId>server</artifactId>
+  <groupId>com.beoearth.server</groupId>
+  <artifactId>tomcat-server</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>war</packaging>
   <name>server</name>
@@ -58,6 +58,12 @@
     <dependency>
       <groupId>io.springfox</groupId>
       <artifactId>springfox-boot-starter</artifactId>
+      <version>${swagger.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>io.springfox</groupId>
+      <artifactId>springfox-swagger-ui</artifactId>
       <version>${swagger.version}</version>
     </dependency>
 
