--- a/server/pom.xml
+++ b/server/pom.xml
@@ -27,6 +27,7 @@
   <properties>
     <java.version>8</java.version>
     <surefire.version>2.4.3</surefire.version>
+    <!-- Getting strange characters on links for the Swagger UI: â€‹ -->
     <swagger.version>3.0.0</swagger.version>
     <gson.version>2.8.6</gson.version>
   </properties>
