--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -6,4 +6,16 @@
 #
 #
 
+spring.main.banner-mode=off
+logging.level.org.springframework=ERROR
 
+spring.jpa.hibernate.ddl-auto=none
+
+spring.datasource.initialization-mode=always
+spring.datasource.platform=postgres
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/${POSTGRES_DBNAME}
+spring.datasource.username=${POSTGRES_USER}
+spring.datasource.password=${POSTGRES_PASS}
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
