--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -5,12 +5,18 @@
 # License: Eclipse Public License - v 2.0 (https://www.eclipse.org/org/documents/epl-2.0/EPL-2.0.html)
 #
 #
-spring.main.banner-mode=off
+server.ssl.enabled=false
 logging.level.org.springframework=ERROR
+server.tomcat.accesslog.enabled=true
+server.tomcat.accesslog.suffix=.log
+server.tomcat.accesslog.prefix=access_log
+server.tomcat.accesslog.file-date-format=.yyyy-MM-dd
+server.tomcat.basedir=tomcat
+server.tomcat.accesslog.directory=logs
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.initialization-mode=always
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/${POSTGRES_DBNAME}
+spring.datasource.url=jdbc:postgresql://${POSTGIS_ADDRESS}:5432/${POSTGRES_DBNAME}
 spring.datasource.username=${POSTGRES_USER}
 spring.datasource.password=${POSTGRES_PASS}
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
