Querying the database now works.

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -19,4 +19,18 @@ spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://${POSTGIS_ADDRESS}:5432/${POSTGRES_DBNAME}
 spring.datasource.username=${POSTGRES_USER}
 spring.datasource.password=${POSTGRES_PASS}
+spring.datasource.continue-on-error=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.generate-ddl=true
+# Disable feature detection by this undocumented parameter. Check the org.hibernate.engine.jdbc.internal.JdbcServiceImpl.configure method for more details.
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+# Because detection is disabled you have to set correct dialect by hand.
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
+spring.datasource.hikari.minimum-idle=0
+# Number of ms to wait before throwing an exception if no connection is available.
+spring.datasource.tomcat.max-wait=10000
+# Maximum number of active connections that can be allocated from this pool at the same time.
+spring.datasource.tomcat.max-active=50
+# Validate the connection before borrowing it from the pool.
+spring.datasource.tomcat.test-on-borrow=true
