--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -35,6 +35,6 @@ spring.datasource.tomcat.max-active=50
 # Validate the connection before borrowing it from the pool.
 spring.datasource.tomcat.test-on-borrow=true
 # From https://gitmemory.com/issue/springfox/springfox/3544/725996266
-# Fix for swagger ui is showing â€<
+# Fix for Swagger UI showing â€< in front of every forward slash.
 server.servlet.encoding.force-response=true
 server.servlet.encoding.charset=utf-8
