--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -16,7 +16,7 @@ server.tomcat.accesslog.directory=logs
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.initialization-mode=always
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://${POSTGIS_ADDRESS}:5432/${POSTGRES_DBNAME}
+spring.datasource.url=jdbc:postgresql://${POSTGIS_ADDRESS}:${POSTGRES_PORT}/${POSTGRES_DBNAME}
 spring.datasource.username=${POSTGRES_USER}
 spring.datasource.password=${POSTGRES_PASS}
 spring.datasource.continue-on-error=true
