Added README.md. Added SERVER_PORT.

--- a/containers/config/.env-template
+++ b/containers/config/.env-template
@@ -2,4 +2,5 @@ POSTGRES_USER=<user>
 POSTGRES_PASS=<password>
 POSTGRES_DBNAME=<database>
 POSTGIS_ADDRESS=<postgis_address>
-POSTGRES_PORT=<port>
+SERVER_PORT=<server_port>
+POSTGRES_PORT=<postgres_port>
