Adding scripts for Tomcat & SSL as described in the following: https://medium.com/@raupach/how-to-install-lets-encrypt-with-tomcat-3db8a469e3d2

--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.8"
 services:
     tomcat:
         container_name: beoearth-server
-        image: library/tomcat:9.0.36-jdk11
+        build: .
         environment:
             POSTGRES_USER: ${POSTGRES_USER}
             POSTGRES_PASS: ${POSTGRES_PASS}
