--- a/client/package.json
+++ b/client/package.json
@@ -39,8 +39,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "@iconify/icons-mdi": "^1.1.2",
-    "@iconify/react": "^1.1.3"
-  }
+  "devDependencies": {}
 }
