Updated .env files to use HOST_IP_ADDRESS. Now using ProxyPoss to access Tomcat Server.

--- a/containers/config/.env-template
+++ b/containers/config/.env-template
@@ -1,6 +1,7 @@
 POSTGRES_USER=<user>
 POSTGRES_PASS=<password>
 POSTGRES_DBNAME=<database>
-POSTGIS_ADDRESS=<postgis_address>
+HOST_IP_ADDRESS=<host_ip_address>
+REACT_APP_HOST_IP_ADDRESS=<host_ip_address>
 SERVER_PORT=<server_port>
 POSTGRES_PORT=<postgres_port>
