Update of comments

--- a/containers/apache/000-default.conf
+++ b/containers/apache/000-default.conf
@@ -39,6 +39,7 @@
 	# after it has been globally disabled with "a2disconf".
 	#Include conf-available/serve-cgi-bin.conf
 
+  # From https://www.jamescoyle.net/how-to/116-simple-apache-reverse-proxy-example
   <Location /server>
     ProxyPass http://<host_ip_address>:<server_port>/server
     Order allow,deny
