--- a/containers/apache/beoearth.com-le-ssl.conf
+++ b/containers/apache/beoearth.com-le-ssl.conf
@@ -36,6 +36,7 @@
     SSLCertificateKeyFile /etc/letsencrypt/live/www.fannenterprises.com/privkey.pem
     Include /etc/letsencrypt/options-ssl-apache.conf
 
+    # From https://www.jamescoyle.net/how-to/116-simple-apache-reverse-proxy-example
     <Location /server>
       ProxyPass http://<host_ip_address>:<server_port>/server
       Order allow,deny
