--- a/containers/apache/beoearth-spa.com-le-ssl.conf
+++ b/containers/apache/beoearth-spa.com-le-ssl.conf
@@ -15,12 +15,12 @@
 
     # Index file and Document Root (where the public files are located)
     DirectoryIndex index.php index.html
-    DocumentRoot /var/www/beoearth.com/public_html
+    DocumentRoot /var/www/beoearth-spa.com/public_html
 
     # Log file locations
     LogLevel warn
-    ErrorLog  /var/www/beoearth.com/log/error.log
-    CustomLog /var/www/beoearth.com/log/access.log combined
+    ErrorLog  /var/www/beoearth-spa.com/log/error.log
+    CustomLog /var/www/beoearth-spa.com/log/access.log combined
 
     # Rewrite .net extensions and missing www.
     RewriteEngine on
