--- a/containers/config/.env-template
+++ b/containers/config/.env-template
@@ -5,3 +5,5 @@ HOST_IP_ADDRESS=<host_ip_address>
 REACT_APP_HOST_IP_ADDRESS=<host_ip_address>
 SERVER_PORT=<server_port>
 POSTGRES_PORT=<postgres_port>
+REACT_APP_PROJECTION_LABEL_DEFAULT=WGS84
+REACT_APP_PROJECTION_VALUE_DEFAULT=4326
