--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -10,6 +10,8 @@ services:
             HOST_IP_ADDRESS: ${HOST_IP_ADDRESS}
             POSTGRES_PORT: ${POSTGRES_PORT}
             SERVER_PORT: ${SERVER_PORT}
+            REACT_APP_PROJECTION_LABEL_DEFAULT: ${REACT_APP_PROJECTION_LABEL_DEFAULT}
+            REACT_APP_PROJECTION_VALUE_DEFAULT: ${REACT_APP_PROJECTION_VALUE_DEFAULT}
         volumes:
             - ./target/server-1.0.0-SNAPSHOT.war:/usr/local/tomcat/webapps/server.war
         ports:
