Now storing the input values in the global of Utils.GeoCodeValues.

--- a/containers/config/.env-template
+++ b/containers/config/.env-template
@@ -7,3 +7,4 @@ SERVER_PORT=<server_port>
 POSTGRES_PORT=<postgres_port>
 REACT_APP_PROJECTION_DEFAULT_LABEL=WGS84
 REACT_APP_PROJECTION_DEFAULT_VALUE=4326
+REACT_APP_PROJECTION_UTM_VALUE=-1
