CORS issue has been resolved Now fetchCalc is working at a basic level.

--- a/containers/apache/000-default.conf
+++ b/containers/apache/000-default.conf
@@ -44,6 +44,7 @@
     ProxyPass http://<host_ip_address>:<server_port>/server
     Order allow,deny
     Allow from all
+    Header set Access-Control-Allow-Origin "*"
   </Location>
 
 </VirtualHost>
