--- a/containers/config/.env-template
+++ b/containers/config/.env-template
@@ -4,3 +4,4 @@ POSTGRES_DBNAME=<database>
 HOST_IP_ADDRESS=<host_ip_address>
 SERVER_PORT=<server_port>
 POSTGRES_PORT=<postgres_port>
+REACT_APP_MAP_KEY=<react_app_map_key>
