Added version to the footer. Added new routes.

--- a/containers/config/.env-template
+++ b/containers/config/.env-template
@@ -5,3 +5,4 @@ HOST_IP_ADDRESS=<host_ip_address>
 SERVER_PORT=<server_port>
 POSTGRES_PORT=<postgres_port>
 REACT_APP_MAP_KEY=<react_app_map_key>
+REACT_APP_VERSION=<react_app_version>
