Fixes Shift Refresh problam in browser when not on the home page. Otherwise, the user will get a 404 error.

--- a/containers/apache/000-default.conf
+++ b/containers/apache/000-default.conf
@@ -47,5 +47,22 @@
     Header set Access-Control-Allow-Origin "*"
   </Location>
 
+  # From https://stackoverflow.com/questions/32150653/apache-web-server-doesnt-allow-me-to-refresh-on-about-but-on-localhost-its-wor
+  RewriteEngine On
+
+  <Location /about>
+    RewriteCond %{DOCUMENT_ROOT}%{REQUEST_URI} -f [OR]
+    RewriteCond %{DOCUMENT_ROOT}%{REQUEST_URI} -d
+    RewriteRule ^ - [L]
+    RewriteRule ^ /index.html [L]
+  </Location>
+
+  <Location /contact>
+    RewriteCond %{DOCUMENT_ROOT}%{REQUEST_URI} -f [OR]
+    RewriteCond %{DOCUMENT_ROOT}%{REQUEST_URI} -d
+    RewriteRule ^ - [L]
+    RewriteRule ^ /index.html [L]
+  </Location>
+
 </VirtualHost>
 
