--- a/containers/apache/beoearth-spa.com-le-ssl.conf
+++ b/containers/apache/beoearth-spa.com-le-ssl.conf
@@ -43,6 +43,21 @@
       Allow from all
     </Location>
 
+    # From https://stackoverflow.com/questions/32150653/apache-web-server-doesnt-allow-me-to-refresh-on-about-but-on-localhost-its-wor
+    <Location /about>
+      RewriteCond %{DOCUMENT_ROOT}%{REQUEST_URI} -f [OR]
+      RewriteCond %{DOCUMENT_ROOT}%{REQUEST_URI} -d
+      RewriteRule ^ - [L]
+      RewriteRule ^ /index.html [L]
+    </Location>
+
+    <Location /contact>
+      RewriteCond %{DOCUMENT_ROOT}%{REQUEST_URI} -f [OR]
+      RewriteCond %{DOCUMENT_ROOT}%{REQUEST_URI} -d
+      RewriteRule ^ - [L]
+      RewriteRule ^ /index.html [L]
+    </Location>
+
   </VirtualHost>
 
 </IfModule>
