Now Shift Refresh works for all non-server and non-home pages.

--- a/containers/apache/000-default.conf
+++ b/containers/apache/000-default.conf
@@ -48,21 +48,16 @@
   </Location>
 
   # From https://stackoverflow.com/questions/32150653/apache-web-server-doesnt-allow-me-to-refresh-on-about-but-on-localhost-its-wor
+  # and
+  # https://stackoverflow.com/questions/8545680/how-to-tell-apache-to-locationmatch-opposite-of-this
   RewriteEngine On
 
-  <Location /about>
+  <LocationMatch "^(?!/server)/[^/]+">
     RewriteCond %{DOCUMENT_ROOT}%{REQUEST_URI} -f [OR]
     RewriteCond %{DOCUMENT_ROOT}%{REQUEST_URI} -d
     RewriteRule ^ - [L]
     RewriteRule ^ /index.html [L]
-  </Location>
-
-  <Location /contact>
-    RewriteCond %{DOCUMENT_ROOT}%{REQUEST_URI} -f [OR]
-    RewriteCond %{DOCUMENT_ROOT}%{REQUEST_URI} -d
-    RewriteRule ^ - [L]
-    RewriteRule ^ /index.html [L]
-  </Location>
+  </LocationMatch>
 
 </VirtualHost>
 
