--- a/client/package.json
+++ b/client/package.json
@@ -7,16 +7,16 @@
     "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.2",
-    "@testing-library/user-event": "^12.6.0",
+    "@testing-library/user-event": "^13.1.1",
     "react": "^17.0.1",
     "react-awesome-lightbox": "^1.7.3",
+    "react-burger-menu": "^3.0.6",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^4.0.3",
     "react-select": "^4.1.0",
     "react-transition-group": "^4.4.1",
-    "typescript": "^4.1.3",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
