--- a/client/package.json
+++ b/client/package.json
@@ -9,13 +9,14 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^13.1.1",
     "react": "^17.0.1",
+    "react-animated-burgers": "^1.2.8",
     "react-awesome-lightbox": "^1.7.3",
-    "react-burger-menu": "^3.0.6",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "react-select": "^4.1.0",
     "react-transition-group": "^4.4.1",
+    "styled-components": "^4.4.1",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
